# server

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  RELEASING.md  alembic.ini  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
sdk/py/: README.md  pyproject.toml
sdk/py/osa/: __init__.py  _registry.py  manifest.py
sdk/py/osa/authoring/: __init__.py  convention.py  hook.py  source.py  validator.py
sdk/py/osa/cli/: credentials.py  deploy.py  link.py  login.py  logout.py  main.py
sdk/py/osa/runtime/: __init__.py  entrypoint.py  source_context.py  source_entrypoint.py
sdk/py/osa/testing/: __init__.py  harness.py
sdk/py/osa/types/: __init__.py  files.py  record.py  schema.py  source.py
sdk/py/tests/: test_cli.py  test_convention.py  test_convention_v2.py  test_credentials.py  test_deploy.py  test_deploy_auth.py  test_deploy_v2.py  test_entrypoint_new.py  test_files.py  test_harness.py  test_hook_decorator.py  test_link.py  test_login.py  test_logout.py  test_new_manifest.py  test_record.py  test_schema.py  test_source_types.py  test_to_field_definitions.py
sdk/py/tests/fixtures/: record.json
server/: .env.example  Dockerfile  Justfile  README.md  config.demo.yaml  entrypoint.sh  fly.toml  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 076_add_feature_tables_record_srn_fks.py  076_add_metadata_schema_and_catalog.py  076_add_records_schema_srn.py  076_schemas_to_id.py  0d9fbacf8e58_initial_tables.py  add_auth_tables.py  add_authorization.py  add_deliver_after.py  add_deposition_tables.py  add_device_authorizations.py  add_harvest_runs.py  add_hooks_and_feature_tables.py  add_ingest_runs.py  add_worker_columns.py  consumer_group_delivery.py  source_agnostic_records.py
server/ontologies/: biological-sex.obographs.json  license.obographs.json
server/osa/: __init__.py  config.py
server/osa/application/: di.py
server/osa/application/event/: __init__.py
server/osa/cli/: __init__.py  main.py
server/osa/cli/commands/: admin.py  search.py  show.py
server/osa/cli/util/: daemon.py  search_cache.py  server_state.py
server/osa/domain/auth/: deps.py
server/osa/domain/discovery/: __init__.py
server/osa/domain/index/: __init__.py
server/osa/domain/search/: __init__.py
server/osa/domain/shared/: adapter.py  command.py  dto.py  error.py  event.py  event_log.py  outbox.py  query.py  service.py
server/osa/infrastructure/: logging.py  runner_utils.py
server/osa/infrastructure/auth/: __init__.py  di.py  orcid.py  provider_registry.py  role_repository.py
server/osa/infrastructure/data/: postgres_catalog_read_store.py  postgres_data_read_store.py  postgres_table_read_store.py  schema_feature_reader.py  schema_features.py
server/osa/infrastructure/event/: di.py  worker.py
server/osa/infrastructure/http/: __init__.py  di.py  ontology_fetcher.py
server/osa/infrastructure/index/: __init__.py  di.py
server/osa/infrastructure/ingest/: di.py
server/osa/infrastructure/k8s/: __init__.py  di.py  errors.py  health.py  ingester_runner.py  naming.py  runner.py  source_runner.py
server/osa/infrastructure/oci/: __init__.py  di.py  ingester_runner.py  runner.py  source_runner.py
server/osa/infrastructure/persistence/: __init__.py  api_naming.py  column_mapper.py  di.py  feature_store.py  feature_table.py  keyset.py  metadata_store.py  metadata_table.py  migrate.py  seed.py  tables.py
server/osa/infrastructure/s3/: client.py  ingest_storage.py  storage.py
server/osa/infrastructure/source/: __init__.py  di.py  discovery.py
server/osa/infrastructure/storage/: layout.py
server/osa/sdk/: __init__.py
server/osa/util/: paths.py
server/scripts/: entrypoint.sh  seed.py  seed_dev_admin.py
server/sources/: __init__.py
server/sources/geo_entrez/: config.py  source.py
server/tests/: conftest.py
server/tests/contract/: test_data_surface_contract.py  test_worker_lifecycle.py
server/tests/integration/: conftest.py  test_bulk_publish_dual_write.py  test_crash_recovery.py  test_data_features_postgres.py  test_data_read_store_postgres.py  test_data_routes_e2e_postgres.py  test_data_streaming_guarantees_postgres.py  test_discovery_compound_postgres.py  test_discovery_cross_join_postgres.py  test_discovery_records_typed_and.py  test_ensure_metadata_table.py  test_event_batch_processing.py  test_insert_record_metadata.py  test_metadata_additive_evolve_postgres.py  test_non_additive_rejected_postgres.py
server/tests/unit/: test_field_ref_resolution.py  test_filter_expr_and_compile.py  test_filter_expr_or_not.py  test_metadata_column_mapper.py  test_metadata_service.py  test_metadata_slug.py  test_no_index_deps.py  test_record_schema_srn_immutable.py
(+741 files in other folders)
