[project]
name = "osa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rory Byrne", email = "rory@rory.bio" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "dishka>=1.7.2",
    "fastapi>=0.121.1",
    "logfire[fastapi,httpx,sqlalchemy]>=4.14.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
osa = "osa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
