[project]
name = "osa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rory Byrne", email = "rory@rory.bio" }
]
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.24.0",
    "alembic>=1.17.2",
    "chromadb>=1.3.7",
    "dishka>=1.7.2",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "logfire[fastapi,httpx]>=4.15.1",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
    "cyclopts>=4.4.0",
    "apscheduler>=4.0.0a6",
    "aiosqlite>=0.22.0",
    "greenlet>=3.2.4",
    "rich>=14.2.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
]

[project.scripts]
osa = "osa:main"

[project.entry-points."osa.sources"]
geo-entrez = "sources.geo_entrez:GEOEntrezSource"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "ty>=0.0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

# Ensure lock file works on both macOS (dev) and Linux (production)
[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# Use CPU-only PyTorch (excludes ~4GB of CUDA libraries)
# explicit = true ensures only torch uses this index, not transitive deps
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
